--- a/test/index.html
+++ b/test/index.html
@@ -14,20 +14,21 @@
 
     * { box-sizing: border-box; }
 
-    .reference { font-family: 'ZLM Manri'; }
-
-    p {
+    p, pre {
       font-size: 40px;
-      font-feature-settings: "liga", "dott";
+      margin: 1em 0;
     }
 
-    p span {
+    p + p {
+      margin-top: -1em;
+    }
+
+    p.rows span {
       margin:  0;
       display: block;
     }
 
     textarea {
-      width:     100%;
       display:   block;
       font-size: 40px;
     }
@@ -37,6 +38,26 @@
       font-family: monospace;
     }
 
+    .two-up {
+      display: flex;
+      width: 100%;
+      align-content: flex-start;
+    }
+
+    .two-up > * {
+      flex: 1;
+      margin: 0;
+    }
+
+    .two-up > * + * {
+      margin-left: 20px;
+    }
+
+
+    /* Available fonts */
+
+    .reference { font-family: 'ZLM Manri'; }
+
     </style>
   </head>
 
@@ -45,7 +66,7 @@
 
     <div class="test-block">
       <h3>CV ligatures</h3>
-      <p class="reference" >
+      <p class="reference rows" >
         <span data-zlm-translate> pa pe pi po pu py pai pei poi pau </span>
         <span data-zlm-translate> ta te ti to tu ty tai tei toi tau </span>
         <span data-zlm-translate> ka ke ki ko ku ky kai kei koi kau </span>
@@ -65,14 +86,14 @@
         <span data-zlm-translate> na ne ni no nu ny nai nei noi nau </span>
       </p>
 
-      <h3>Diacritic vertical alignment</h3>
-      <p data-zlm-translate class="reference"> a e i o u y ai ei oi au </p>
 
-      <h3>Vowel combinations</h3>
-      <p class="reference">
+      <h3>Self-dotting vowels</h3>
+      <p class="reference rows">
         <span data-zlm-translate>    a    e    i    o    u    y    ai    ei    oi    au </span>
-        <span data-zlm-translate>   ia   ie   ii   io   iu   iy   iai   iei   ioi   iau </span>
-        <span data-zlm-translate>   ua   ue   ui   uo   uu   uy   uai   uei   uoi   uau </span>
+      </p>
+
+      <h3>Attitudinal ligatures</h3>
+      <p class="reference rows">
         <span data-zlm-translate>  a'a  a'e  a'i  a'o  a'u  a'y  a'ai  a'ei  a'oi  a'au </span>
         <span data-zlm-translate>  e'a  e'e  e'i  e'o  e'u  e'y  e'ai  e'ei  e'oi  e'au </span>
         <span data-zlm-translate>  i'a  i'e  i'i  i'o  i'u  i'y  i'ai  i'ei  i'oi  i'au </span>
@@ -84,6 +105,25 @@
         <span data-zlm-translate> ei'a ei'e ei'i ei'o ei'u ei'y ei'ai ei'ei ei'oi ei'au </span>
         <span data-zlm-translate> oi'a oi'e oi'i oi'o oi'u oi'y oi'ai oi'ei oi'oi oi'au </span>
         <span data-zlm-translate> au'a au'e au'i au'o au'u au'y au'ai au'ei au'oi au'au </span>
+      </p>
+
+      <h3>Auto semivowels</h3>
+      <p class="reference rows">
+        <span data-zlm-translate>   ia   ie   ii   io   iu   iy   iai   iei   ioi   iau </span>
+        <span data-zlm-translate>   ua   ue   ui   uo   uu   uy   uai   uei   uoi   uau </span>
+      </p>
+
+      <h3>Diacritic vertical alignment</h3>
+      <p data-zlm-translate class="reference"> a e i o u y ai ei oi au </p>
+
+
+      <h3>Ligature precedence</h3>
+      <p class="reference">
+        <span data-zlm-translate> co'o ci'izra </span> → &#xe2384;&#xe2314; &#Xe2383;&#Xe2313;&#Xe2400;&#Xe23f1;
+      </p>
+
+      <p class="reference">
+        <span data-zlm-translate> uau je'u do'oi </span> → &#xe244a; &#xe2412;&#xe2315; &#xe23c4;&#xe2319;
       </p>
     </div>
 
@@ -101,8 +141,14 @@
     -->
 
     <h2>IME Emulation</h2>
-    <textarea data-ime-emulation class="reference" rows="10"></textarea>
-
+    <div class="two-up">
+      <textarea data-ime-emulation class="reference" rows="10">
+cizra
+je ci'izra
+sei mi ciska
+      </textarea>
+      <pre class="reference" data-ime-output>&#xe2389;</pre>
+    </div>
     <script src="preview.js"></script>
   </body>
 </html>
