Fixed build script, I think

--- a/test/index.html
+++ b/test/index.html
@@ -141,7 +141,7 @@
         </tr>
 
         <tr>
-          <td data-zlm-translate> plukauaii </td> <td> &#xe2320;&#xe2365;&#xe2341;&#xe2441;&#xe2433;</td>
+          <td data-zlm-translate> plukawaqi </td> <td> &#xe2320;&#xe2365;&#xe2341;&#xe2441;&#xe2433;</td>
         </tr>
       </table>
     </div>
