--- a/test/index.html
+++ b/test/index.html
@@ -164,8 +164,7 @@
       <textarea data-ime-emulation class="reference" rows="10">
 cizra
 je ci'izra
-sei mi ciska
-      </textarea>
+sei mi ciska</textarea>
       <pre class="reference" data-ime-output>&#xe2389;</pre>
     </div>
     <script src="preview.js"></script>
